# subrosa

./: CLAUDE.md  pyproject.toml
.claude/plans/: implementation.md
config/: skills.json  system_prompt.md  team.json
config/briefing/: briefing.md
docs/: v3-plan.md  v4-plan.md
skills/briefing/: config.json  skill.md
subrosa/: __init__.py  __main__.py  agent.py  app.py  cli.py  config.py  context.py  health.py  media.py  procedures.py  prompt.py  scheduler.py  store.py  telegram.py
subrosa1/: __main__.py  agent.py  cli.py  config.py  health.py  memory.py  scheduler.py  skills.py  store.py  telegram.py
systemd/: subrosa.service
tests/: test_app.py  test_config.py  test_context.py  test_health.py  test_integration.py  test_media.py  test_memory.py  test_store.py  test_telegram.py
